// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OauthButton should render correctly 1`] = `
<OauthButton
  className="testClassString"
  displayName="Google"
  login={false}
  service="google"
  to="/"
>
  <Row
    className="testClassString"
    full={true}
  >
    <Flex
      className="testClassString"
      flow="row"
      full={true}
    >
      <div
        className="flex row undefined full testClassString"
      >
        <Link
          className="button google"
          newTab={false}
          target="_self"
          title="Sign up with Google"
          to="/"
        >
          <Link
            className="link button google"
            replace={false}
            target={false}
            title="Sign up with Google"
            to="/"
          >
            <a
              className="link button google"
              href="/"
              onClick={[Function]}
              target={false}
              title="Sign up with Google"
            >
              <span>
                Sign up
                 with 
                Google
              </span>
            </a>
          </Link>
        </Link>
      </div>
    </Flex>
  </Row>
</OauthButton>
`;

exports[`OauthButton should render login correctly 1`] = `
<OauthButton
  className="testClassString"
  displayName="Google"
  login={true}
  service="google"
  to="/"
>
  <Row
    className="testClassString"
    full={true}
  >
    <Flex
      className="testClassString"
      flow="row"
      full={true}
    >
      <div
        className="flex row undefined full testClassString"
      >
        <Link
          className="button google"
          newTab={false}
          target="_self"
          title="Login with Google"
          to="/"
        >
          <Link
            className="link button google"
            replace={false}
            target={false}
            title="Login with Google"
            to="/"
          >
            <a
              className="link button google"
              href="/"
              onClick={[Function]}
              target={false}
              title="Login with Google"
            >
              <span>
                Login
                 with 
                Google
              </span>
            </a>
          </Link>
        </Link>
      </div>
    </Flex>
  </Row>
</OauthButton>
`;
